feat: adicionado dominio de autenticacao
